# cronator

./: .dockerignore  .env.example  .env.secure.example  .gitignore  AGENTS.md  Dockerfile  README.md  check_db_security.py  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  package.json  pyproject.toml  start.bat  start.ps1  start.sh  tailwind.config.js  verify_security.py
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 7a45991c91e2_initial_schema_with_all_tables.py  a1b2c3d4e5f6_add_artifacts_support.py  b629d2878149_remove_git_commit_column_from_scripts_.py  c7e2f1a9b3d8_add_reliability_fields.py  f3d04be66245_update_default_python_version_to_3_12.py
app/: __init__.py  config.py  database.py  main.py  script_templates.py
app/api/: __init__.py  dependencies.py  executions.py  pages.py  rate_limit.py  scripts.py  scripts_versions_endpoints.txt  settings.py
app/models/: __init__.py  artifact.py  execution.py  script.py  script_version.py  setting.py
app/schemas/: __init__.py  artifact.py  execution.py  script.py  script_version.py
app/services/: __init__.py  alerting.py  cleanup_service.py  environment.py  executor.py  git_sync.py  scheduler.py  settings_service.py
app/static/: input.css  output.css
app/templates/: base.html  dashboard.html  execution_detail.html  executions.html  (+5 more)
backups/: .gitkeep
cronator_lib/: __init__.py  context.py  logging.py  notify.py  pyproject.toml  timer.py
docs/: ARTIFACTS_GUIDE.md
migrations/: 001_add_is_test_to_executions.sql  002_create_script_versions.sql
tests/: conftest.py
(+24 files in other folders)
